main/default/objects/Session__c/fields/Calendar_Info__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Info__c</fullName>
    <label>Calendar Info</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>