main/default/objects/Session__c/fields/Calendar_Invite_Email_Description__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Invite_Email_Description__c</fullName>
    <label>Calendar Invite Email Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>