main/default/objects/Session__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Sessions (Campaign)</relationshipLabel>
    <relationshipName>AttendeeSessions</relationshipName>
    <type>Lookup</type>
</CustomField>