main/default/objects/Session__c/fields/CampaignId__c.field-meta.xml
<CustomField>
    <fullName>CampaignId__c</fullName>
    <description>This field is populated by a process upon the creation of a session record. It stores the ID of the campaign linked to this session so guest user can query sessions without being given read permission on Campaign object.</description>
    <label>CampaignId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>