main/default/objects/Session__c/fields/Catch_up__c.field-meta.xml
<CustomField>
    <fullName>Catch_up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked - Indicates that session is offered with catchup session</description>
    <label>Session Catch-Up</label>
    <type>Checkbox</type>
</CustomField>