main/default/objects/Session__c/fields/Catchup_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Catchup_End_Date__c</fullName>
    <description>End date of the catchup sesion</description>
    <label>Session Catch-Up End Date</label>
    <type>DateTime</type>
</CustomField>