main/default/objects/Session__c/fields/Catchup_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Catchup_Start_Date__c</fullName>
    <description>Start date of the Catchup session</description>
    <label>Session Catch-Up Start Date</label>
    <type>DateTime</type>
</CustomField>