main/default/objects/Session__c/fields/Confirmed_Participants__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Participants__c</fullName>
    <description>Total number of Session Participants with Status = Confirmed</description>
    <label>Confirmed Participants</label>
    <summaryFilterItems>
        <field>Session_Participant__c.Status__c</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </summaryFilterItems>
    <summaryForeignKey>Session_Participant__c.Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>