main/default/objects/Session__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <description>This field is populated by a process upon the creation of a session record. It stores the ID of the contact linked to this session so guest user can query sessions without being given read permission on Contact object.</description>
    <label>ContactId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>