main/default/objects/Session__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>80000</length>
    <type>Html</type>
</CustomField>