main/default/objects/Session__c/fields/Do_Not_Send_Calendar_Invite__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Send_Calendar_Invite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Send Calendar Invite</label>
    <type>Checkbox</type>
</CustomField>