main/default/objects/Session__c/fields/End_Date_Time2__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time2__c</fullName>
    <label>End Date Time2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>