main/default/objects/Session__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <description>Parent Event&apos;s Event Id</description>
    <formula>Event__r.Event_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Id</label>
    <type>Text</type>
</CustomField>