main/default/objects/Session__c/fields/EventName__c.field-meta.xml
<CustomField>
    <fullName>EventName__c</fullName>
    <formula>Event__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EventName</label>
    <type>Text</type>
</CustomField>