main/default/objects/Session__c/fields/Meeting_Info__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Info__c</fullName>
    <label>Meeting Info</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>