main/default/objects/Session__c/fields/Meeting_URL__c.field-meta.xml
<CustomField>
    <fullName>Meeting_URL__c</fullName>
    <label>Meeting Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>