main/default/objects/Session__c/fields/MS_Teams_Id__c.field-meta.xml
<CustomField>
    <fullName>MS_Teams_Id__c</fullName>
    <description>MS Team Integration - Meeting Id</description>
    <label>MS Teams Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>