main/default/objects/Session__c/fields/Outreach_Notification__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Notification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to Outreach Notification</description>
    <label>Outreach Notification</label>
    <referenceTo>Outreach_Notification__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>