main/default/objects/Session__c/fields/Propose_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Propose_End_Date_Time__c</fullName>
    <label>Propose End Date Time</label>
    <type>DateTime</type>
</CustomField>