main/default/objects/Session__c/fields/Propose_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Propose_Start_Date_Time__c</fullName>
    <label>Propose Start Date Time</label>
    <type>DateTime</type>
</CustomField>