main/default/objects/Session__c/fields/Registered_Participants__c.field-meta.xml
<CustomField>
    <fullName>Registered_Participants__c</fullName>
    <description>Total number of Session Participants with Status = Registered</description>
    <label>Registered Participants</label>
    <summaryFilterItems>
        <field>Session_Participant__c.Status__c</field>
        <operation>equals</operation>
        <value>Registered</value>
    </summaryFilterItems>
    <summaryForeignKey>Session_Participant__c.Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>