main/default/objects/Session__c/fields/Send_Updated_Calendar_Invite__c.field-meta.xml
<CustomField>
    <fullName>Send_Updated_Calendar_Invite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Updated Calendar Invite</label>
    <type>Checkbox</type>
</CustomField>