main/default/objects/Session__c/fields/Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Date__c</fullName>
    <formula>TEXT( DATEVALUE(Session__r.Start_Date_Time__c) ) &amp; &quot; to &quot; &amp; TEXT( DATEVALUE(Session__r.End_Date_Time__c) )</formula>
    <label>Session Date</label>
    <type>Text</type>
</CustomField>