main/default/objects/Session__c/fields/Session_Details_Full__c.field-meta.xml
<CustomField>
    <fullName>Session_Details_Full__c</fullName>
    <description>For email template to show full month for session dates</description>
    <label>Session Details Full</label>
    <length>255</length>
    <type>Text</type>
</CustomField>