main/default/objects/Session__c/fields/Session_Details_Start_Full__c.field-meta.xml
<CustomField>
    <fullName>Session_Details_Start_Full__c</fullName>
    <label>Session Details Start Full</label>
    <length>255</length>
    <type>Text</type>
</CustomField>