main/default/objects/Session__c/fields/Session_Full__c.field-meta.xml
<CustomField>
    <fullName>Session_Full__c</fullName>
    <description>Identifies if the Session Participants for the Session has reached the Max No. of Participants Allowed</description>
    <formula>Total_Participants_Registered__c &gt;= Session_Registration_Limit__c</formula>
    <label>Session Full</label>
    <type>Checkbox</type>
</CustomField>