main/default/objects/Session__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <label>Session Id</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>