main/default/objects/Session__c/fields/Session_Location__c.field-meta.xml
<CustomField>
    <fullName>Session_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session Location</label>
    <referenceTo>Session_Location__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>