main/default/objects/Session__c/fields/Session_Registration_Limit__c.field-meta.xml
<CustomField>
    <fullName>Session_Registration_Limit__c</fullName>
    <description>Denotes MAX number of Participants that can register in a Session</description>
    <label>Session Registration Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>