main/default/objects/Session__c/fields/Sign_Up_Instructions_2__c.field-meta.xml
<CustomField>
    <fullName>Sign_Up_Instructions_2__c</fullName>
    <description>Holds the instructions for Sign-up</description>
    <label>Sign Up Instructions</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>