main/default/objects/Session__c/fields/Sign_Up_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Sign_Up_Instructions__c</fullName>
    <description>Holds the instructions for Sign-up</description>
    <label>Sign Up Instructions (Deprecated)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>