main/default/objects/Session__c/fields/Start_Date_Time2__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time2__c</fullName>
    <label>Start Date Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>