main/default/objects/Session__c/fields/Start_Date_Time_2__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time_2__c</fullName>
    <formula>Start_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>