main/default/objects/Session__c/fields/Start_Date_Time_on_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time_on_Timezone__c</fullName>
    <description>CCN-EVE-1834-DV: the start datetime on the session timezone converted to org default timezone</description>
    <label>Start Date Time on Timezone</label>
    <type>DateTime</type>
</CustomField>