main/default/objects/Session__c/fields/Total_Participants_Registered__c.field-meta.xml
<CustomField>
    <fullName>Total_Participants_Registered__c</fullName>
    <description>Total Number of Session Participants that are either Registered or Confirmed</description>
    <formula>Confirmed_Participants__c +  Registered_Participants__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Participants Registered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>