main/default/objects/Session__c/fields/Total_Participants_Registered_New__c.field-meta.xml
<CustomField>
    <fullName>Total_Participants_Registered_New__c</fullName>
    <description>CCN-EVE-1834-DV - This is a system field updated by the apex trigger. This is referenced by Total_Participants_Registered to make sure the field showing is a read-only field.</description>
    <label>System Total Participants Registered</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>