main/default/objects/Session__c/fields/User_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>User_Time_Zone__c</fullName>
    <formula>TEXT($User.TimeZoneSidKey)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Timezone of the logged-in user.</inlineHelpText>
    <label>User Time Zone</label>
    <type>Text</type>
</CustomField>