main/default/objects/Session__c/validationRules/Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Validation</fullName>
    <active>true</active>
    <description>Start Date time &lt;= to End Date Time.</description>
    <errorConditionFormula>Start_Date_Time_2__c  &gt;= End_Date_Time__c</errorConditionFormula>
    <errorMessage>Start Date must be less than the End Date.</errorMessage>
</ValidationRule>