main/default/objects/Session__c/validationRules/DateTime_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>DateTime_validation</fullName>
    <active>true</active>
    <description>Ensures that both dates have the same date and that the time of the End Date is after the Start Date. This rule prevents users from saving records where the dates are different or where the End Date is not later than the Start Date.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Start_Date_Time__c)),
NOT(ISBLANK(End_Date_Time__c)),
OR(
DATEVALUE(Start_Date_Time__c) &lt;&gt; DATEVALUE(End_Date_Time__c),
AND(
DATEVALUE(Start_Date_Time__c) = DATEVALUE(End_Date_Time__c),
Start_Date_Time__c &gt;= End_Date_Time__c
)
)
)</errorConditionFormula>
    <errorMessage>The Start Date and End Date must be the same with the End Time greater than the Start Time.</errorMessage>
</ValidationRule>