main/default/objects/Session__c/validationRules/IsActiveValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>IsActiveValidation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  IsActive__c = true, ( ISNULL(Start_Date_Time__c)  ||  ISNULL( End_Date_Time__c ) ), null)</errorConditionFormula>
    <errorMessage>Please enter a Start and End Date to set the Session to Active.</errorMessage>
</ValidationRule>