main/default/objects/Session__c/validationRules/ProposedDate_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ProposedDate_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Propose_Start_Date_Time__c)),
    NOT(ISBLANK(Propose_End_Date_Time__c )),
    OR(
        DATEVALUE(Propose_Start_Date_Time__c) &lt;&gt; DATEVALUE(Propose_End_Date_Time__c ),
        AND(
            DATEVALUE(Propose_Start_Date_Time__c) = DATEVALUE(Propose_End_Date_Time__c ),
            TIMEVALUE(Propose_Start_Date_Time__c) &gt;= TIMEVALUE(Propose_End_Date_Time__c )
        )
    )
)</errorConditionFormula>
    <errorMessage>The Propose Start Date and Propose End Date must be the same with the End Time greater than the Start Time.</errorMessage>
</ValidationRule>