main/default/objects/Session__c/validationRules/Timezone_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Timezone_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(NOT(ISNULL(Start_Date_Time__c)),NOT(ISNULL(End_Date_Time__c))), ISBLANK(TEXT( Time_Zone__c )) )</errorConditionFormula>
    <errorDisplayField>Time_Zone__c</errorDisplayField>
    <errorMessage>Please select a timezone.</errorMessage>
</ValidationRule>