main/default/objects/Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>End_Date_Time__c</columns>
    <columns>Time_Zone__c</columns>
    <columns>IsActive__c</columns>
    <columns>Event__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>